[FIX] account_reports: right-align numbers and prevent wrapping
Summary
-------
Currently, numbers and dates can be wrapped on reports. Also, numbers
are not correctly aligned.

Steps to reproduce
------------------
* create and confirm an invoice that has a line with a long label.
* print the general ledger

You should see that, even though there's still room on the report, the
numbers are wrapped.

opw-3436993
opw-3465157
opw-3461247
opw-3462774

closes odoo/enterprise#46307

X-original-commit: 85ccea0ecea74e0764d6350d160c8455c1465b66

--- a/account_reports/static/src/scss/account_report_print.scss
+++ b/account_reports/static/src/scss/account_report_print.scss
@@ -100,9 +100,17 @@
         }
     }
 
+    .date {
+        word-break: keep-all !important;
+        white-space: nowrap;    
+    }
+
     .number{
+        word-break: keep-all !important;
+        white-space: nowrap;    
         font-weight: normal !important;
         color: black !important;
+        text-align: right;
     }
     .total td{
         font-weight: bold !important;
